--- a/assets/diff.html
+++ b/assets/diff.html
@@ -50,16 +50,16 @@ This example demonstrates how to set left and right editors using ajax.
 					<label for="ignorews">Ignore Whitespace</label>
 				</div>
 				<div class="nav-item">
-					<i class="mdi-hardware-keyboard-arrow-up" alt="Go to previous diff" id="prev-diff"></i>
+					<i class="mdi-hardware-keyboard-arrow-up" title="Go to previous diff" id="prev-diff"></i>
 				</div>
 				<div class="nav-item">
-					<i class="mdi-hardware-keyboard-arrow-down" alt="Go to next diff" id="next-diff"></i>
+					<i class="mdi-hardware-keyboard-arrow-down" title="Go to next diff" id="next-diff"></i>
 				</div>
 				<div class="nav-item">
-					<i class="mdi-hardware-keyboard-arrow-left" alt="Replace Right File with Left Content" id="move-to-right"></i>
+					<i class="mdi-hardware-keyboard-arrow-left" title="Replace Right File with Left Content" id="move-to-right"></i>
 				</div>
 				<div class="nav-item">
-					<i class="mdi-hardware-keyboard-arrow-right" alt="Replace Left File with Right Content" id="move-to-left"></i>
+					<i class="mdi-hardware-keyboard-arrow-right" title="Replace Left File with Right Content" id="move-to-left"></i>
 				</div>
 				<div class="nav-item right">
 					<a class="btn waves-effect waves-light green" id="button-save">Save</a>
