Typo. Remove the quote which broke the spinner

--- a/assets/index.html
+++ b/assets/index.html
@@ -95,7 +95,7 @@
   </div>
 
   <template id="spinner_template">
-    <div class="preloader-wrapper tiny active center-align">'
+    <div class="preloader-wrapper tiny active center-align">
       <div class="spinner-layer spinner-blue-only">
         <div class="circle-clipper left">
           <div class="circle"></div>
